2007-04-20 [wwp]	2.9.1cvs12

	* src/gtk/Makefile.am
		Added headers.h (completes 2.9.1cvs5).

2007-04-20 [wwp]	2.9.1cvs11

	* src/addressbook.c
		Fix the use of display name in name column,
		it has been overriden w/ the use of nickname
		by 2.9.0cvs3. Now nickname is used (if any)
		in case of LDAP books only.

2007-04-20 [colin]	2.9.1cvs10

	* src/mimeview.c
	* src/summaryview.c
	* src/textview.c
		Add handling of 'a' to loop in a mail's
		mimeparts

2007-04-20 [colin]	2.9.1cvs9

	* src/toolbar.c
		Fix bug 1190, 'dir_open' button doesn't work'
		(Maemo)

2007-04-20 [colin]	2.9.1cvs8

	* src/folderview.c
	* src/mainwindow.c
		Fix bug 1194, 'Hardware keys move from email 
		list to account/directory list, but not back 
		to email list...' (Maemo)

2007-04-20 [colin]	2.9.1cvs7

	* src/compose.h
		complete previous commit

2007-04-20 [colin]	2.9.1cvs6

	* src/compose.c
		Fix bug 1187, 'Reply-to addressee disappears 
		when reply-to text box is clicked...' (Maemo)

2007-04-20 [wwp]	2.9.1cvs5

	* po/POTFILES.in
	* src/addressbook.c
	* src/compose.c
	* src/filtering.c
	* src/headerview.c
	* src/matcher.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_display_header.c
	* src/prefs_matcher.c
	* src/summaryview.c
	* src/gtk/headers.h
	* src/gtk/quicksearch.c
		Translate more header names according to the relevant option value,
		mostly in filtering debug messages (reported by Tim <timbrain@post.cz>).
		Replaced nearly all uses of prefs_common.trans_hdr with a call
		to prefs_common_translated_header_name().
		Added a headers.h reference file that contains known header names
		(RFC2822 and others) to the translation process' input, so that
		translated header names will still exist even if no occurrence of
		_("headername") is found anymore in the sources.
		Don't translate column name 'Number' following to trans_hdr option
		value as it's not a header name.

2007-04-20 [colin]	2.9.1cvs4

	* src/gtk/quicksearch.c
	* src/gtk/quicksearch.h