@@ -2540,3 +2540,4 @@
 ( cvs diff -u -r 1.83.2.105 -r 1.83.2.106 src/mimeview.c;  cvs diff -u -r 1.395.2.297 -r 1.395.2.298 src/summaryview.c;  cvs diff -u -r 1.96.2.168 -r 1.96.2.169 src/textview.c;  ) > 2.9.1cvs10.patchset
 ( cvs diff -u -r 1.60.2.87 -r 1.60.2.88 src/addressbook.c;  ) > 2.9.1cvs11.patchset
 ( cvs diff -u -r 1.20.2.13 -r 1.20.2.14 src/gtk/Makefile.am;  ) > 2.9.1cvs12.patchset
+( cvs diff -u -r 1.1.2.68 -r 1.1.2.69 src/gtk/quicksearch.c;  ) > 2.9.1cvs13.patchset
