@@ -1,3 +1,9 @@
+2007-04-21 [colin]	2.9.1cvs13
+
+	* src/gtk/quicksearch.c
+		Fix changing quicksearch type (after Esc,
+		after changing Recursive, ...)
+
 2007-04-20 [wwp]	2.9.1cvs12
 
 	* src/gtk/Makefile.am
